start update navigation

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --accent: #008000;
   --main-text: #070000;
   --grey-text: #8f8f8f;
+  --error: #f44336;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
