--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,11 +1,12 @@
 nav {
   display: flex;
-  gap: 0px;
+  align-items: center;
+  gap: 16px;
 }
 .link {
   font-family: var(--font-family);
   color: var(--main-text);
-  padding: 10px;
+  padding: 4px;
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.2px;
@@ -26,7 +27,7 @@ nav {
   width: 0;
   opacity: 0;
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
   box-shadow: 0 4px 10px rgb(30, 181, 30);
@@ -42,14 +43,73 @@ nav {
   opacity: 1;
 }
 
-.counter {
-  padding: 1px 5px;
+.favorites {
+  font-size: 28px;
+}
+
+.myAccount {
+  font-size: 20px;
+}
+
+
+
+.navLinkCart {
+  width: 115px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  background-color: var(--accent);
+  border-radius: 20px;
+  justify-content: center;
+}
+
+.favoriteCounter {
+  position: absolute;
+  font-size: 12px;
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  bottom: 25%;
+  left: 5%;
   background-color: var(--accent);
   border-radius: 100px;
-  color: var(--white);
-  display: inline-block;
   transform: scale(0.5);
-  margin-left: 4px;
+
+}
+
+.counter {
+  color: var(--white);
+  transform: scale(0.5);
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.cart {
+color: var(--white);
+font-size: 20px;
+}
+
+.totalSumWrap {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+
+}
+
+.totalSum {
+  color: var(--white);
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.currency {
+  font-size: 12px;
+  font-weight: 400;
+
 }
 
 .counterShow {
@@ -75,7 +135,13 @@ nav {
 }
 
 @keyframes bounce-scale {
-  0%   { transform: scale(1); }
-  50%  { transform: scale(1.3); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
