--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -10,7 +10,8 @@
   border-radius: 12px;
   padding: 16px;
   gap: 8px;
-  transition: transform 0.4s ease;
+  opacity: 1;
+  transition: color 0.4s ease, opacity 300ms ease, transform 0.4s ease;
 }
 
 .productCard:hover {
@@ -30,7 +31,7 @@
   cursor: pointer;
   background-color: transparent;
   border: none;
-  transition: color 0.4s ease;
+  transition: color 0.4s ease, transform 0.4s ease;
 }
 
 .myLoveActive {
@@ -38,11 +39,37 @@
 }
 
 .myLove:hover {
-  color: var(--accent);
+  transform: scale(1.2);
 }
 
 .myLove:active {
   transform: scale(0.9);
+}
+
+.deleteBtn {
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  font-size: 24px;
+  color: rgb(188, 195, 188);
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  transition: color 0.4s ease, transform 0.4s;
+}
+
+.deleteBtn:hover {
+  color: var(--error);
+}
+
+.deleteBtn:active {
+    transform: scale(0.9);
+}
+
+.removing {
+  opacity: 0;
+  transform: scale(0.95);
+  pointer-events: none;
 }
 
 .descriptionWrap {
@@ -129,11 +156,12 @@
   background-color: transparent;
   border: none;
   font-size: 25px;
-  transition: color 0.4s ease;
+  transition: color 0.4s ease, transform 0.4s ease;
 }
 
 .btn:hover {
   color: var(--white);
+  transform: scale(1.3);
 }
 
 .btn:active {
