--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,147 +1,5 @@
-nav {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-.link {
-  font-family: var(--font-family);
-  color: var(--main-text);
-  padding: 4px;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 0.2px;
-  transition: color 0.4s ease-in-out, letter-spacing 0.4s ease-in-out;
-  position: relative;
-}
-
-.link:hover {
-  letter-spacing: 1px;
-  color: var(--accent);
-}
-
-.link::after {
-  content: '';
-  display: block;
-  height: 1px;
-  background-color: var(--accent);
-  width: 0;
-  opacity: 0;
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  box-shadow: 0 4px 10px rgb(30, 181, 30);
-  transition: width 0.4s ease-in-out, opacity 0.4s ease-in-out;
-}
-
-.link.active {
-  color: var(--accent);
-}
-
-.link.active::after {
-  width: 80%;
-  opacity: 1;
-}
-
-.favorites {
-  font-size: 28px;
-}
-
-.myAccount {
-  font-size: 20px;
-}
-
-
-
-.navLinkCart {
-  width: 115px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  background-color: var(--accent);
-  border-radius: 20px;
-  justify-content: center;
-}
-
-.favoriteCounter {
-  position: absolute;
-  font-size: 12px;
-  width: 16px;
-  height: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--white);
-  bottom: 25%;
-  left: 5%;
-  background-color: var(--accent);
-  border-radius: 100px;
-  transform: scale(0.5);
-
-}
-
-.counter {
-  color: var(--white);
-  transform: scale(0.5);
-  font-size: 12px;
-  font-weight: 600;
-}
-
-.cart {
-color: var(--white);
-font-size: 20px;
-}
-
-.totalSumWrap {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
-
-}
-
-.totalSum {
-  color: var(--white);
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.currency {
-  font-size: 12px;
-  font-weight: 400;
-
-}
-
-.counterShow {
-  animation: pop-in 0.5s ease forwards;
-}
-
-@keyframes pop-in {
-  0% {
-    opacity: 0;
-    transform: scale(0.4);
-  }
-  60% {
-    opacity: 1;
-    transform: scale(1.3);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.bounce {
-  animation: bounce-scale 0.4s ease;
-}
-
-@keyframes bounce-scale {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
-  }
-  100% {
-    transform: scale(1);
-  }
+.nav {
+    display: flex;
+    align-items: center;
+    gap: 12px;
 }
