--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -107,8 +107,10 @@
 }
 
 .quantityPrice {
+  text-align: center;
     font-size: 24px;
     font-weight: 600;
+    min-width: 110px;
 
 }
 .quantityPrice span {
