--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -78,9 +78,6 @@
   border-bottom: 1px solid var(--grey-text);
 }
 
-.description {
-}
-
 .description h3 {
   font-size: 18px;
   margin-bottom: 8px;
@@ -108,14 +105,13 @@
 
 .quantityPrice {
   text-align: center;
-    font-size: 24px;
-    font-weight: 600;
-    min-width: 110px;
-
+  font-size: 24px;
+  font-weight: 600;
+  min-width: 110px;
 }
 .quantityPrice span {
-    font-size: 18px;
-    font-weight: 400;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .plus {
@@ -142,9 +138,9 @@
 }
 
 .deleteBtn {
-    padding: 0;
-    display: flex;
-    align-items: center;
+  padding: 0;
+  display: flex;
+  align-items: center;
   width: 30px;
   height: 30px;
   background-color: transparent;
@@ -154,7 +150,7 @@
 }
 
 .deleteBtn:hover {
-    color: var(--error);
+  color: var(--error);
 }
 
 .options {
@@ -167,4 +163,11 @@
 .line {
   width: 100%;
   border: 1px solid gray;
+}
+
+.notProductInCart {
+   color: var(--grey-text);
+  font-size: 24px;
+  text-align: center;
+  padding: 50px;
 }
