--- a/src/pages/ProductDetails/ProductDetails.module.css
+++ b/src/pages/ProductDetails/ProductDetails.module.css
@@ -1,64 +1,100 @@
-.productContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 50px;
-    padding: 20px 100px;
+.optionsSection {
+  margin-bottom: 100px;
 }
 
+.productContainer {
+  padding: 20px 100px;
+}
 
 .productHeaderWrap {
   display: flex;
   flex-wrap: wrap;
-  gap: 32px;
+  justify-content: space-between;
   padding: 24px;
-  background-color: #fafafa;
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-  max-width: 1000px;
-  margin: 0 auto;
   align-items: flex-start;
 }
 
 .productImgWrap {
-  flex: 1 1 300px;
-  max-width: 400px;
-  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0;
   overflow: hidden;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  max-width: 500px;
+  max-height: 400px;
 }
 
 .productImg {
-  width: 100%;
-  height: auto;
-  display: block;
   object-fit: cover;
-  border-radius: 16px;
 }
 
 .descriptionWrap {
-  flex: 2 1 400px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  list-style: none;
-  padding: 0;
+  align-items: start;
+  justify-content: space-between;
+  min-height: 400px;
 }
 
-.descriptionWrap h2 {
-  font-size: 28px;
-  color: #222;
-  margin: 0;
+.appointmentWrap {
+  font-size: 18px;
 }
 
-.descriptionWrap p {
-  font-size: 16px;
-  line-height: 1.6;
-  color: #444;
-  margin: 0;
-}
-
-.descriptionWrap span {
+.apoint{
+  background: var(--white);
   font-weight: 500;
-  color: #666;
+  padding: 8px 16px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+}
+
+.wrap {
+    width: 100%;
+}
+.descriptionWrap h2 {
+  margin-bottom: 20px;
+}
+
+.text {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.howMany {
+  margin-bottom: 20px;
+  font-size: 18px;
+  color: var(--grey-text);
+  margin-bottom: 32px;
+}
+
+.btnWrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btnBuy {
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 30px;
+  border-radius: 30px;
+  background-color: var(--accent);
+  font-size: 22px;
+  font-weight: 400;
+  color: var(--white);
+  font-family: var(--font-family);
+  border: none;
+  transition: opacity 0.4s ease;
+}
+
+.btnBuy:hover {
+  opacity: 85%;
+}
+
+.price {
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: auto;
 }
