--- a/src/pages/ProductDetails/components/Options/Options.module.css
+++ b/src/pages/ProductDetails/components/Options/Options.module.css
@@ -1,18 +1,8 @@
-.container {
-  min-width: 900px;
-  margin: 40px auto;
-  padding: 24px;
-  background-color: #fdfdfd;
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  font-family: 'Segoe UI', sans-serif;
-}
-
 .title {
   font-size: 26px;
   font-weight: 600;
   margin-bottom: 24px;
-  color: #1e293b;
+  color: var(--main-text);
 }
 
 .descriptions {
@@ -22,7 +12,7 @@
 }
 
 .item {
-  border-bottom: 1px solid #e2e8f0;
+  border-bottom: 1px solid var(--accent);
 }
 
 .header {
@@ -30,7 +20,6 @@
   text-align: left;
   background: none;
   border: none;
-  padding: 16px;
   font-size: 18px;
   font-weight: 500;
   color: #0f172a;
@@ -41,16 +30,33 @@
 }
 
 .icon {
+  padding: 10px;
   transition: transform 0.3s ease;
+  font-size: 28px;
+  color: var(--accent);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transform-origin: center;
 }
 
-.open {
+.openIcon {
   transform: rotate(180deg);
 }
 
+.contentWrapper {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.4s ease, padding 0.4s ease;
+}
+
+.contentWrapper.open {
+  max-height: 1000px;
+  padding-bottom: 16px;
+}
+
 .content {
-  padding: 0 16px 16px 16px;
-  animation: fadeIn 0.3s ease-in-out;
+  animation: fadeIn 0.4s ease;
 }
 
 .content p {
@@ -60,13 +66,17 @@
   line-height: 1.5;
 }
 
+.content ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translateY(-4px);
   }
   to {
     opacity: 1;
-    transform: translateY(0);
   }
 }
