--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -19,13 +19,9 @@
   transform: scale(1.05);
 }
 
-
 .productImage {
   max-width: 80%;
 }
-
-
-
 
 .removing {
   opacity: 0;
@@ -39,14 +35,13 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  gap: 24px;
   z-index: 1;
-  gap: 32px;
 }
 
 .textAndOptions {
   display: flex;
   flex-direction: column;
-  gap: 32px;
   width: 100%;
 }
 
@@ -79,7 +74,17 @@
   transition: color 0.4s ease;
 }
 
+.rating {
+  transition: color 0.4s ease;
+}
 
+.productCard:hover .rating {
+  color: var(--white);
+}
+
+.ratingIsInCart {
+  color: var(--white);
+}
 
 .price {
   font-size: 1.25rem;
@@ -110,7 +115,7 @@
 }
 
 .colorRoundIsInCart {
-    width: 200%;
+  width: 200%;
   height: 50%;
   right: 0;
   border-radius: 20% 20% 0 0;
@@ -120,18 +125,14 @@
   color: var(--white);
 }
 
-
-
 .productCard:hover .price {
   color: var(--white);
 }
 
 .textIsInCart {
-    color: var(--white);
+  color: var(--white);
 }
 
 .priceIsInCart {
   color: var(--white);
-
 }
-
