--- a/src/pages/Team/Team.module.css
+++ b/src/pages/Team/Team.module.css
@@ -1,15 +1,101 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
 }
 
 .team {
-    margin-top: 50px;
-    margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .teamImage {
-    max-width: 400px;
-    margin: 0 auto;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.btn {
+  width: 200px;
+  height: 50px;
+  background-color: red;
+}
+
+.navLinkCart {
+  width: 115px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  background-color: var(--accent);
+  border-radius: 20px;
+  justify-content: center;
+  transition: opacity 0.4s ease;
+  border: none;
+}
+
+.navLinkCart:hover {
+  opacity: 85%;
+}
+
+.cart {
+  color: var(--white);
+  font-size: 20px;
+}
+
+.counter {
+  color: var(--white);
+  transform: scale(0.5);
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.totalSumWrap {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+}
+
+.totalSum {
+  color: var(--white);
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.currency {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.counterShow {
+  animation: pop-in 0.5s ease forwards;
+}
+
+.bounce {
+  animation: bounce-scale 0.4s ease;
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: scale(0.4);
+  }
+  60% {
+    opacity: 1;
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bounce-scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
