--- a/src/pages/ProductDetails/components/Main/Main.module.css
+++ b/src/pages/ProductDetails/components/Main/Main.module.css
@@ -35,13 +35,17 @@
 
 .apoint {
   background: var(--white);
-  font-weight: 500;
+  font-weight: 600;
   max-width: 400px;
   padding: 8px 16px;
   border-radius: 8px;
+  line-height: 1.6;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
+.apoint span {
+  font-weight: 400;
+}
 
 .wrap {
   width: 100%;
