--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -1,26 +1,51 @@
-.catalog {
-  width: 200px;
-  height: 500px;
+.catalogWrap {
+  min-width: 230px;
+  height: auto;
   background-color: var(--white);
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 24px 12px;
+  gap: 24px;
+  padding: 32px 24px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.btnSection {
-  border: none;
-  background-color: transparent;
-  padding: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-  border-radius: 8px;
+.catalogWrap h3 {
+  margin-bottom: 16px;
+  color: var(--main-text);
+  font-size: 20px;
+  text-decoration: underline;
+  text-underline-offset: 6px;
 }
 
-.btnSection:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-  transform: scale(1.05);
+.catalogWrap ul {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 12px;
+  flex-direction: column;
+  padding-left: 12px;
+}
+.label {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  transition: box-shadow 0.3s ease, color 0.3s ease;
+}
+
+.checkbox {
+  margin-right: 8px;
+  accent-color: var(--accent);
+  width: 18px;
+  height: 18px;
+}
+
+.active {
+  box-shadow: 0 0 10px rgba(0, 128, 0, 0.5);
+  color: var(--accent);
 }
