--- a/src/components/UserWindow/UserWindow.module.css
+++ b/src/components/UserWindow/UserWindow.module.css
@@ -5,14 +5,14 @@
   top: 0;
   left: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: end;
+  align-items: start;
   z-index: 1000;
 }
 
 .modal {
-  left: 30%;
-  top: -13%;
+  left: 0;
+  top: 60px;
   background: var(--white);
   padding: 2rem;
   border-radius: 1rem;
@@ -54,12 +54,18 @@
 
 .closeButton {
   position: absolute;
-  top: 0.5rem;
-  right: 0.7rem;
+  top: 10px;
+  right: 10px;
   background: none;
   border: none;
-  font-size: 1.5rem;
+  font-size: 24px;
   cursor: pointer;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.closeButton:hover {
+color: var(--error);
+transform: scale(1.1);
 }
 
 .avatarWrapper {
