--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -75,6 +75,7 @@
   display: flex;
   align-items: center;
   padding-bottom: 20px;
+  cursor: pointer;
   border-bottom: 1px solid var(--grey-text);
 }
 
