--- a/src/pages/Placing/Placing.module.css
+++ b/src/pages/Placing/Placing.module.css
@@ -19,33 +19,14 @@
 
 .main {
   background-color: var(--white);
-  margin-bottom: 100px;
   padding-top: 40px;
+  padding-bottom: 100px;
 }
-
 
 .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 320px;
-  max-width: 375px;
-  margin: 0 auto;
-  padding: 0 8px;
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0 16px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .container {
-    max-width: 1280px;
-    padding: 0 60px;
-  }
 }
 
 .goBack button {
@@ -69,11 +50,9 @@
 }
 
 .main h2 {
-  margin-bottom: 24px;
   font-size: 32px;
+  margin-bottom: 20px;
 }
-
-
 
 .form {
   display: flex;
@@ -86,12 +65,22 @@
   align-items: start;
   flex-direction: column;
   justify-content: start;
-  min-width: 55%;
-  gap: 80px;
+  min-width: 60%;
 }
 
 .main h3 {
   font-size: 24px;
+  margin-bottom: 20px;
+  padding-left: 50px;
+}
+
+.delivery {
+  width: 100%;
+  padding: 24px;
+  border: 1px solid var(--grey-text);
+  border-radius: 12px;
+  margin-bottom: 50px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
 }
 
 .sendWindow {
