--- a/src/pages/Placing/components/Client/Client.module.css
+++ b/src/pages/Placing/components/Client/Client.module.css
@@ -1,6 +1,45 @@
 .client {
+    width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
+  margin-bottom: 50px;
+}
+
+.client h3 {
+    padding-left: 50px;
+    margin-bottom: 20px;
+}
+
+.clientWrap {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+    border: 1px solid var(--grey-text);
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+}
+
+.inputsWrap {
+display: flex;
+flex-direction: column;
+gap: 8px;
+}
+
+.client input {
+    border: none;
+    font-size: 18px;
+}
+
+.cart {
+    display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+.cart h4{
+margin-bottom: 12px;
+font-size: 18px;
 }
