--- a/src/pages/Placing/components/DeliveryWay/DeliveryWay.module.css
+++ b/src/pages/Placing/components/DeliveryWay/DeliveryWay.module.css
@@ -1,8 +1,9 @@
 .deliveryOptions {
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 20px;
+  padding-left: 24px;
 }
 
 .deliveryOptions label {
