--- a/src/pages/Placing/components/PaymentMethod/PaymentMethod.module.css
+++ b/src/pages/Placing/components/PaymentMethod/PaymentMethod.module.css
@@ -1,5 +1,9 @@
 .wrapper {
-  margin-top: 32px;
+    width: 100%;
+  padding: 24px;
+  border: 1px solid var(--grey-text);
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper h3 {
