--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -62,7 +62,7 @@
   min-height: 58px;
 }
 
-.text {
+.brief {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -121,7 +121,7 @@
   border-radius: 20% 20% 0 0;
 }
 
-.productCard:hover .text {
+.productCard:hover .brief {
   color: var(--white);
 }
 
