--- a/src/pages/ProductDetails/components/Details/Details.module.css
+++ b/src/pages/ProductDetails/components/Details/Details.module.css
@@ -1,11 +1,9 @@
 .details {
-  padding: 16px;
+ padding-top: 16px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
   margin: auto;
   line-height: 1.6;
-
 }
 
 .details p span {
