--- a/src/pages/Placing/components/DeliveryCity/DeliveryCity.module.css
+++ b/src/pages/Placing/components/DeliveryCity/DeliveryCity.module.css
@@ -1,33 +1,126 @@
-
-
-
 .recipient {
-    margin-bottom: 12px;
-}
-
-.inputCityWrap {
-margin-top: 20px;
-margin-bottom: 20px;
-}
-
-.popularCities {
-    margin-top: 4px;
-}
-
-.cityList {
   display: flex;
-  gap: 4px;
+  align-items: center;
+  justify-content: start;
+  gap: 24px;
+  margin-bottom: 12px;
+  padding: 12px;
+  border: 1px solid var(--grey-text);
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
 }
 
-.cityList li button {
-  padding: 4px 4px;
-  background-color: #f0f0f0;
-  border: none;
-  border-radius: 6px;
+.radioLabel {
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  transition: background-color 0.2s ease;
+  user-select: none;
 }
 
-.cityList li button:hover {
-  background-color: #d4d4d4;
+.radioInput {
+  display: none;
+}
+
+.customRadio {
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--main-text);
+  border-radius: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 4px;
+}
+
+.radioInput:checked + .customRadio::after {
+  content: '';
+  position: absolute;
+  width: 70%;
+  height: 70%;
+  border-radius: 100%;
+  background-color: var(--accent);
+}
+
+.deliveryWayWrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  min-height: 170px;
+}
+
+.userInfo {
+  min-width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
+.userInfoHidden {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.inputWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.inputWrap:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.label {
+  font-size: 16px;
+  color: var(--main-text);
+  font-weight: 600;
+  margin-left: 10px;
+}
+
+.required {
+  color: var(--error);
+  font-size: 20px;
+}
+.cityList {
+  width: 100%;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 20px;
+}
+
+.input {
+  padding: 10px 14px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #333;
+  transition: border-color 0.2s ease;
+  cursor: text;
+  background-color: #f9f9f9;
+  color: #333;
+  border-radius: 8px;
+}
+
+.error {
+  color: var(--error);
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.input:focus {
+  outline: none;
+  border-color: #aaa;
+  box-shadow: none;
+}
+
+.input[readonly] {
+  background-color: #f9f9f9;
+  color: #333;
 }
