--- a/src/pages/Placing/components/DeliveryWay/DeliveryWay.module.css
+++ b/src/pages/Placing/components/DeliveryWay/DeliveryWay.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top: 20px;
   padding-left: 24px;
 }
 
@@ -11,4 +10,46 @@
   align-items: center;
   gap: 8px;
   font-weight: 500;
+}
+
+.deliveryOptions input {
+  margin-right: 8px;
+}
+
+.title {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--main-text);
+}
+
+.radioLabel {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.radioInput {
+  display: none;
+}
+
+.customRadio {
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--main-text);
+  border-radius: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 4px;
+}
+
+.radioInput:checked + .customRadio::after {
+  content: '';
+  position: absolute;
+  width: 70%;
+  height: 70%;
+  border-radius: 100%;
+  background-color: var(--accent);
 }
