--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,31 +1,53 @@
 .hero {
-    margin-top: 50px;
-    margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .hero h2 {
-font-size: 48px;
-font-weight: 600;
-margin-bottom: 24px;
+  font-size: 48px;
+  font-weight: 600;
+  margin-bottom: 24px;
 }
 
-.hero p{
-    font-size: 28px;
-    font-weight: 400;
+.hero p {
+  font-size: 28px;
+  font-weight: 400;
 }
-
 
 .container {
-    align-items: center;
-    justify-content: center;
-     display: flex;
-     gap: 36px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  gap: 36px;
 }
 
 .tetiana {
-    max-width: 400px;
+  max-width: 400px;
 }
 
 .hello {
-    max-width: 600px;
+  max-width: 600px;
+}
+
+.contentActive {
+  width: 50% !important;
+  height: 50% !important;
+}
+
+.customModalContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 42px;
+}
+
+.customModalContent h2 {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.customModalContent p {
+  font-size: 24px;
+  font-weight: 400;
 }
