--- a/src/pages/Placing/components/SendWindow/SendWindow.module.css
+++ b/src/pages/Placing/components/SendWindow/SendWindow.module.css
@@ -20,6 +20,7 @@
   border-radius: 12px;
   letter-spacing: 1.3px;
   margin-bottom: 12px;
+  outline: none;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
