--- a/src/components/AuthModal/AuthModal.module.css
+++ b/src/components/AuthModal/AuthModal.module.css
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 700px;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 10px;
   padding: 80px;
   z-index: 1000;
@@ -137,6 +137,7 @@
   box-shadow: 0 0 10px 0 rgba(21, 140, 71, 0.5), 0 0 10px 0 rgba(21, 140, 71, 0.5);
   opacity: 0.9;
 }
+
 .error {
   position: absolute;
   bottom: -20px;
