--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -19,6 +19,14 @@
   transform: scale(1.05);
 }
 
+.productImageWrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .productImage {
   max-width: 80%;
 }
