--- a/src/pages/UserOffice/Info/Info.module.css
+++ b/src/pages/UserOffice/Info/Info.module.css
@@ -13,8 +13,6 @@
   border-radius: 20px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   flex: 1;
-  min-width: 300px;
-  max-width: 500px;
 }
 
 .infoContainer h2 {
@@ -36,14 +34,14 @@
 
 .infoContainer span {
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   color: var(--grey-text);
   margin-bottom: 8px;
 }
 
 .infoContainer p {
   margin-left: 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
   color: var(--main-text);
 }
@@ -97,4 +95,114 @@
   align-items: center;
   justify-content: center;
   color: var(--accent);
+}
+
+.modalWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.modalWrapOpen {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modalForm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  background-color: var(--white);
+  border-radius: 10px;
+  padding: 80px;
+  z-index: 1000;
+  overflow: auto;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  gap: 32px;
+  border: none;
+}
+
+.modalFormGroup {
+   position: relative;
+  width: 100%;
+}
+
+.modalFormInput {
+   width: 100%;
+  height: 65px;
+  border: 1px solid var(--main-text);
+  border-radius: 12px;
+  padding: 10px 24px;
+  font-size: 18px;
+  outline: none;
+  background-color: transparent;
+  color: var(--main-text);
+}
+
+.modalFormLabel {
+  position: absolute;
+  left: 24px;
+  top: 0;
+  transform: translateY(-50%);
+  background-color: #fff;
+  padding: 0 5px;
+  font-size: 16px;
+  letter-spacing: 0.05em;
+  color: var(--main-text);
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+
+.closeBtn {
+  top: 24px;
+  right: 24px;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  color: #000;
+  transition: color 0.3s ease;
+}
+
+.modalFormButton {
+  width: 300px;
+  letter-spacing: 0.05em;
+  height: 65px;
+  border: none;
+  border-radius: 12px;
+  background-color: var(--accent);
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+}
+
+.modalFormButton:hover {
+  box-shadow: 0 0 10px 0 rgba(21, 140, 71, 0.5), 0 0 10px 0 rgba(21, 140, 71, 0.5);
+  opacity: 0.9;
+}
+
+.modalForm .error {
+  position: absolute;
+  left: 0;
+  font-size: 14px;
+  color: var(--error);
 }
